[package]
name = "rust_cursor_bench"
description = "Benchmarking Rust cursor types"
version = "0.1.0"
authors = ["Eric Seppanen <eds@reric.net>"]
edition = "2018"
license = "MIT"

[dependencies]
serde = { version="1", features = ["derive"] }
bincode = "1.3"
bytes = "1"

[dev-dependencies]
criterion = "0.3"
pprof = { version = "0.3", features = ["flamegraph"] }

[[bench]]
name = "cursor_bench"
harness = false

[profile.bench]
opt-level = 3
